se agrega al formuario el campo color

--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,9 @@
         <label for="password"> Password:</label>
         <input id="password" type="password"/>
         <br/>
+        <label for="color"> color:</label>
+        <input id="color" type="color"/>
+        <br/>
         <label for="date"> Hora:</label>
         <input id="date" type="time"/>
         <br/>
