se agrean propiedades div y placeholder

--- a/Index.html
+++ b/Index.html
@@ -8,20 +8,17 @@
 <body>
     <h1>Ingrese aqui sus datos</h1>
     <form>
-        <label for="usuario"> Nombre de usuario:</label>
-        <input id="usuario" type="text"/>
+        <input id="usuario" type="text" placeholder="Nombre de usuario"/>
         <br/>
-        <label for="password"> Password:</label>
-        <input id="password" type="password"/>
+        <input id="password" type="password" placeholder="Password" />
         <br/>
-        <label for="color"> color:</label>
+        <div>
+        <label for="color"> Color:</label>
         <input id="color" type="color"/>
-        <br/>
-        <label for="date"> Hora:</label>
-        <input id="date" type="time"/>
-        <br/>
-        <label for="email"> Correo electronico:</label>
-        <input id="email" type="email"/>
+        <label for="time"> Hora:</label>
+        <input id="time" type="time"/>
+        </div>
+        <input id="email" type="email" placeholder="Correo electronico" />
         <br/>
         <label for="checkbox"> Acepta?</label>
         <input id="checkbox" type="checkbox"/>
